# dex-parser

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO  out2
examples/: classes.rs  find_class.rs  simple.rs
src/: annotation.rs  cache.rs  class.rs  code.rs  dex.rs  encoded_item.rs  encoded_value.rs  error.rs  field.rs  jtype.rs  lib.rs  list.rs  method.rs  search.rs  source.rs  string.rs  utils.rs
src/disass/: insn.in  mod.rs  opcodes.rs
tests/: test.rs
