[package]
name = "dex-parser"
version = "0.1.0"
authors = ["Rohit Kumar <letmutx@gmail.com>"]
edition = "2018"

[dependencies]
cesu8 = "1.1.0"
scroll = "0.9.0"
scroll_derive = "0.9.2"
memmap = "0.7.0"
lru = "0.1.13"
num-traits = "0.2"
num-derive = "0.2"
bitflags = "1.2.1"
log = "0.4.8"

[dev-dependencies]
tempfile = "3.0.8"
env_logger = "0.7.1"
