[package]
name = "dex"
version = "0.4.0"
authors = ["Rohit Kumar <letmutx@gmail.com>"]
edition = "2018"
description = "Rust library for parsing dex files"
repository = "https://github.com/letmutx/dex-parser.git"
license = "MIT"
readme = "README.md"
keywords = ["dex", "android", "parser", "dexlib"]

[dependencies]
cesu8 = "1.1.0"
scroll = "0.9.0"
scroll_derive = "0.9.2"
memmap = "0.7.0"
lru = "0.6.5"
num-traits = "0.2"
num-derive = "0.2"
bitflags = "1.2.1"
log = "0.4.8"
getset = "0.0.9"
adler32 = "1.0.4"

[dev-dependencies]
tempfile = "3.0.8"
env_logger = "0.7.1"
